--- a/templates/User.html
+++ b/templates/User.html
@@ -1,6 +1,8 @@
 {% extends 'ShopMenu.html' %}
 {% block main %}
 <div class='catalog' align='center'>
-    <h1>Логин: {{ User.name }}</h1>
+    <h1 class="title">
+  Welcome, {{ name }}!
+</h1>
 </div>
 {% endblock %}
